--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ chrono = { version = "0.4" }
 hostname = "0.4.2"
 log = "0.4"
 env_logger = "0.11.8"
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
+mockito = "1.6.1"
+predicates = "3.1.3"
