--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name    = "sentinel-rs"
-version = "0.1.0"
-edition = "2024"
-license = "Apache-2.0"
-authors = ["Ayush Bindlish <ayushbindlish96@gmail.com>"]
+name        = "sentinel-rs"
+version     = "0.1.0"
+edition     = "2024"
+license     = "Apache-2.0"
+description = "A secure, local task runner with out-of-band notifications, written in Rust."
+authors     = ["Ayush Bindlish <ayushbindlish96@gmail.com>"]
+repository  = "https://github.com/ayushbindlish/sentinel-rs"
+readme      = "README.md"
+keywords    = ["cli", "monitoring", "telegram", "task-runner", "notifications"]
+categories  = ["command-line-utilities"]
 
 [dependencies]
 
@@ -14,13 +19,13 @@ reqwest = { version = "0.13.1", default-features = false, features = [
 ] }
 
 
-serde_json = "1.0.146"
+serde_json = "1.0.149"
 chrono     = { version = "0.4" }
 hostname   = "0.4.2"
 log        = "0.4"
 env_logger = "0.11.8"
 
 [dev-dependencies]
-assert_cmd = "2.0.16"
+assert_cmd = "2.1.2"
 mockito    = "1.6.1"
 predicates = "3.1.3"
